k8s/apps/misskey/httproute-usercontent.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns-cloudflare.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: misskey-usercontent
  namespace: misskey
spec:
  hostnames:
    - misskeyusercontent.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: seaweedfs-default-s3
          namespace: seaweedfs
          port: 8333
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: seaweedfs.local.walnuts.dev
            path:
              replacePrefixMatch: /misskey/files
              type: ReplacePrefixMatch
        - requestHeaderModifier:
            add:
              - name: X-Forwarded-Prefix
                value: /files
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /files
